up load truoc khi loi